--- a/src/index.html
+++ b/src/index.html
@@ -68,11 +68,8 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info load-hidden">
               <p class="about-wrapper__info-text">
-                I'm a software engineer who has years of experience with React JS, Python and Java. Currently seeking for my next opportunity!
-                Looking for a role that allows me to apply my knowledge and skills towards a reputable purpose and further my own understanding of the different technologies that are prevalent and emerging in software development. 
-              </p>
-              <p class="about-wrapper__info-text">
-                My hobbies include basketball, philosophy, and hiking.
+                I am a dual degree graduate with a BESc. in Mechatronics Systems Engineering and a BSc. in Computer Science from Western University.
+                As an experienced programmer who has led development of cloud based applications, I am currently seeking for my next opportunity to apply my skills and further my knowledge of software engineering.
               </p>
               <span class="d-flex mt-3">
                 <a
@@ -101,7 +98,7 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text load-hidden">
-                <h3 class="project-wrapper__text-title"> Local Neighborhood CNN </h3>
+                <h3 class="project-wrapper__text-title"> localNeighborhoodCNN </h3>
                 <div>
                   <p class="mb-4">
                     This project was an instructional based discovery project, to code a convolutional neural network and implement the Convulation, Max Pool and Simply Connected layers. 
@@ -115,27 +112,69 @@
                   class="cta-btn text-color-main"
                   href="https://github.com/zainmk/localneighborhoodCNN"
                 >
-                  Source Code
+                  source code
                 </a>
               </div>
             </div>
             <div class="col-lg-8 col-sm-12">
               <div class="project-wrapper__image load-hidden">
-                <a rel="noreferrer" href="https://en.wikipedia.org/wiki/MNIST_database" target="_blank">
-                  <div
-                    data-tilt
-                    data-tilt-max="4"
-                    data-tilt-glare="true"
-                    data-tilt-max-glare="0.5"
-                    class="thumbnail rounded js-tilt"
-                  >
-                    <img
-                      alt="Project Image"
-                      class="img-fluid"
-                      src="assets/mnist_data_pic.png"
-                    />
-                  </div>
+                <div
+                  data-tilt
+                  data-tilt-max="4"
+                  data-tilt-glare="true"
+                  data-tilt-max-glare="0.5"
+                  class="thumbnail rounded js-tilt"
+                >
+                  <img
+                    alt="Project Image"
+                    class="img-fluid"
+                    src="assets/mnist_data_pic.png"
+                  />
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-lg-4 col-sm-12">
+              <div class="project-wrapper__text load-hidden">
+                <h3 class="project-wrapper__text-title"> pyTicTacToe </h3>
+                <div>
+                  <p class="mb-4">
+                    A game of TicTacToe you can play with someone else or against the computer The python code uses tkinter GUI to help show the gameplay. The computer has several levels of difficulty...
+                    </br></br>
+                    Easy; selects the next available empty space
+                    </br>
+                    Medium; selects a randomly available empty space
+                    </br>
+                    Hard; selects the 'best' move based off the Minimax algorithm. Computer is <b>unbeatable</b>.
+                  </p>
+                </div>
+                <a
+                  rel="noreferrer"
+                  target="_blank"
+                  class="cta-btn text-color-main"
+                  href="https://github.com/zainmk/pyTicTacToe"
+                >
+                  source code
                 </a>
+              </div>
+            </div>
+            <div class="col-lg-8 col-sm-12">
+              <div class="project-wrapper__image load-hidden">
+                <div
+                  data-tilt
+                  data-tilt-max="4"
+                  data-tilt-glare="true"
+                  data-tilt-max-glare="0.5"
+                  class="thumbnail rounded js-tilt"
+                  style="max-width: 400px"
+                >
+                  <img
+                    alt="Project Image"
+                    class="img-fluid"
+                    src="assets/pyTicTacToe.png"
+                  />
+                </div>
               </div>
             </div>
           </div>
