adding pyCOVID project, const. image size

--- a/src/index.html
+++ b/src/index.html
@@ -165,7 +165,7 @@
                     Trained off the MNIST data set, to classify hand drawn digits from 0-9.
                   </p>
                   <p class="mb-4">
-                    🛠 | JavaSDK
+                    🛠 | Java
                   </p>
                 </div>
                 <a
@@ -198,7 +198,54 @@
           </div>
 
 
-          
+
+
+
+          <div class="row">
+            <div class="col-lg-4 col-sm-12">
+              <div class="project-wrapper__text load-hidden">
+                <h3 class="project-wrapper__text-title"> pyCOVID </h3>
+                <div>
+                  <p class="mb-4">
+                    A script that utilizes techniques of webscraping to collect open source data online regarding COVID rates in different cities 
+                    and analyze the data with ML methods to depict trends and understand climate effects of COVID rates.
+                  </p>
+                  <p class="mb-4">
+                    🛠 | Python, Selenium, Sklearn, MySQL
+                  </p>
+                </div>
+                <a
+                  rel="noreferrer"
+                  target="_blank"
+                  class="cta-btn text-color-main"
+                  href="https://github.com/zainmk/pyCOVID19"
+                >
+                  code
+                </a>
+              </div>
+            </div>
+            <div class="col-lg-8 col-sm-12">
+              <div class="project-wrapper__image load-hidden">
+                <div
+                  data-tilt
+                  data-tilt-max="4"
+                  data-tilt-glare="true"
+                  data-tilt-max-glare="0.5"
+                  class="thumbnail rounded js-tilt"
+                  style="max-width: 400px"
+                >
+                  <img
+                    alt="Project Image"
+                    class="img-fluid"
+                    src="assets/pyCOVID.png"
+                  />
+                </div>
+              </div>
+            </div>
+          </div>
+
+
+
 
 
           <div class="row">
