--- a/src/index.html
+++ b/src/index.html
@@ -89,6 +89,23 @@
                   RESUME
                 </a>
               </span>
+              </br>
+              <div
+                  data-tilt
+                  data-tilt-max="4"
+                  data-tilt-max-glare="0.5"
+                  class="thumbnail rounded js-tilt"
+                  style="max-width: 200"
+                >
+                  <a  href="https://coursera.org/share/003f5dfa7f56a08e1ba057ff93dc6e25" target="_blank">
+                    <img
+                      alt="Cert Image"
+                      class="img-fluid"
+                      src="assets/cert.png"
+                    />
+                  </a>
+                </div>
+              </div>
             </div>
           </div>
         </div>
@@ -102,7 +119,7 @@
     <section id="projects">
       <div class="container">
         <div class="project-wrapper">
-          <h2 class="section-title dark-blue-text">Projects</h2>
+          <h2 class="section-title dark-blue-text"> Projects </h2>
           
           <!-- Notice: each .row is a project -->
           
