--- a/src/index.html
+++ b/src/index.html
@@ -89,7 +89,7 @@
                   RESUME
                 </a>
               </span>
-              </br>
+              <hr>
               <div
                   data-tilt
                   data-tilt-max="4"
@@ -225,7 +225,7 @@
                 <div>
                   <p class="mb-4">
                     A script that utilizes techniques of webscraping to collect open source data online regarding COVID rates in different cities 
-                    and analyze the data with ML methods to depict trends and understand climate effects of COVID rates.
+                    and analyze the data with ML methods to depict trends and understand climate effects on COVID rates.
                   </p>
                   <p class="mb-4">
                     🛠 | Python, Selenium, Sklearn, MySQL
