--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,7 @@
         <h1 class="hero-title load-hidden">
           Hi, my name is <span class="text-color-main">Zain Khan</span>.
           <br />
-          I'm a Software Engineer, currently seeking a new role...
+          I'm a Software/Mechatroics Engineer. Welcome to my portfolio page...
         </h1>
         <p class="hero-cta load-hidden">
           <a rel="noreferrer" class="cta-btn cta-btn--hero" href="#about"
@@ -72,12 +72,14 @@
             <div class="about-wrapper__info load-hidden">
               <p class="about-wrapper__info-text">
                 As a dual degree graduate in Mechatronics Systems Engineering (BESc.) and Computer Science (BSc.) from Western University,
-                I have always enjoyed learning about how the technologies we use on a daily basis work. 
-                I consider my aptitude and quick learning ability a skill I always like to exercise and make full use of.
+                I have always enjoyed learning about how the technologies we use on a daily basis work.
+                I've always seen data at the core of such systems, from its collections through sensors to its analysis through AI/ML methods,
+                and how such analysis can have real-world implications.
               </p>
               <p class="about-wrapper__info-text">
-                I have years of experience with fullstack development, primarily with ReactJS/TS based frameworks as well as Python and Java for backend tasks and scripting.
-                I am currently learning more about ML algorithms and neural network architectures to truly understand AI.
+                I have multiple years of experience with fullstack development, primarily with ReactJS/TS based frameworks for frontend development 
+                as well as Python and Java for backend servers and scripting.
+                I've worked on several projects focused around understanding AI/ML methods and models.
               </p>
               <span class="d-flex mt-3">
                 <a
@@ -90,21 +92,6 @@
                 </a>
               </span>
               <hr>
-              <div
-                  data-tilt
-                  data-tilt-max="4"
-                  data-tilt-max-glare="0.5"
-                  class="thumbnail rounded js-tilt"
-                  style="max-width: 200"
-                >
-                  <a  href="https://coursera.org/share/003f5dfa7f56a08e1ba057ff93dc6e25" target="_blank">
-                    <img
-                      alt="Cert Image"
-                      class="img-fluid"
-                      src="assets/cert.png"
-                    />
-                  </a>
-                </div>
               </div>
             </div>
           </div>
